--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	var results = [];
 	
 	if(window.location.hash) {
-		let array = window.location.hash.split(",");
+		let array = window.location.hash.split("|").map(decodeURIComponent);
 		let chunkSize = 11;
 		for (let i = 0; i < array.length; i += chunkSize) {
 			let chunk = array.slice(i, i + chunkSize);
@@ -216,12 +216,31 @@
 	</div>`;
 	
 	window.onload = function(){
-	
-		document.getElementById("winnerContainer").innerHTML = generateResultCard(results[0]);
 		
-		document.getElementById("top4Container").innerHTML = results.slice(1,4).map(generateResultCard).join("");
 		
-		document.getElementById("top8Container").innerHTML = results.slice(4,8).map(generateResultCard).join("");
+		let x = new XMLHttpRequest();
+		x.open("GET", "https://www.duelingbook.com/static/cards.json");
+		x.onload = function() {
+			let cards = JSON.parse(x.responseText).cards
+		
+			for(let i in results){
+				results[i].cardId = cards.find((e)=>{return e.n==results[i].cardId;})?.id;
+				results[i].subCardId = cards.find((e)=>{return e.n==results[i].subCardId;})?.id;
+				
+				results[i].cardId = results[i].cardId ? results[i].cardId : 3433;
+				results[i].subCardId = results[i].subCardId ? results[i].subCardId : 3433;
+			}
+		
+			document.getElementById("winnerContainer").innerHTML = generateResultCard(results[0]);
+		
+			document.getElementById("top4Container").innerHTML = results.slice(1,4).map(generateResultCard).join("");
+			
+			document.getElementById("top8Container").innerHTML = results.slice(4,8).map(generateResultCard).join("");
+			
+		};
+		x.send();
+		
+		
 		
 		
 	}
